complete first refactor iteration for f.e.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,24 +5,23 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Shop"
-    />
+    <meta name="description" content="restaurant management" />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-    
-      <!-- STYLES -->
-      <link rel="stylesheet"
-            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 
-      <style>
-        * {
-          margin: 0;
-          font-family: 'Roboto', sans-serif;
-        }
-      </style>
-    <title>React App</title>
+    <!-- STYLES -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+
+    <style>
+      * {
+        margin: 0;
+        font-family: "Roboto", sans-serif;
+      }
+    </style>
+    <title>Restaurant Management</title>
   </head>
   <body>
     <div id="root"></div>
